Add prediction link and new community link

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -84,7 +84,7 @@
               </div>
             </ng-container>
           </li>
-          <li class="menu__item menu__item--with-submenu">
+          <!-- <li class="menu__item menu__item--with-submenu">
         <ng-container>
           <a class="menu__link menu__link--drop">
             <span class="menu__link-text">{{'IEO' | translate}}</span>
@@ -99,6 +99,11 @@
             </ul>
           </div>
         </ng-container>
+      </li> -->
+      <li class="menu__item">
+        <a class="menu__link" href="https://predictionlab.exrates.me" target="blank">
+          <span class="menu__link-text">{{'Prediction' | translate}}</span>
+        </a>
       </li>
     </ul>
     <ul class="community-wr">
@@ -118,6 +123,26 @@
                 <span class="menu__link-text">Telegramm</span>
               </a>
             </li> -->
+            <li class="submenu__item">
+              <a class="submenu__link" href="https://t.me/exrates_official_cn" target="blank">
+                <span class="menu__link-text">Community China</span>
+              </a>
+            </li>
+            <li class="submenu__item">
+              <a class="submenu__link" href="https://t.me/exrates_official_id" target="blank">
+                <span class="menu__link-text">Community Indonesia</span>
+              </a>
+            </li>
+            <li class="submenu__item">
+              <a class="submenu__link" href="https://t.me/exrates_official_ru" target="blank">
+                <span class="menu__link-text"> Community Russia</span>
+              </a>
+            </li>
+            <li class="submenu__item">
+              <a class="submenu__link" href="https://t.me/exrates_official_ko" target="blank">
+                <span class="menu__link-text">Community Korea</span>
+              </a>
+            </li>
             <li class="submenu__item">
               <a class="submenu__link" href="https://twitter.com/Exrates_Me" target="blank">
                 <span class="menu__link-text">Twitter</span>
