--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -84,7 +84,7 @@
               </div>
             </ng-container>
           </li>
-          <!-- <li class="menu__item menu__item--with-submenu">
+          <li class="menu__item menu__item--with-submenu">
         <ng-container>
           <a class="menu__link menu__link--drop">
             <span class="menu__link-text">{{'IEO' | translate}}</span>
@@ -99,7 +99,7 @@
             </ul>
           </div>
         </ng-container>
-      </li> -->
+      </li>
       <li class="menu__item">
         <a class="menu__link" href="https://predictionlab.exrates.me" target="blank">
           <span class="menu__link-text">{{'Prediction' | translate}}</span>
