--- a/src/app/ieo/components/ieo-info/ieo-info.component.html
+++ b/src/app/ieo/components/ieo-info/ieo-info.component.html
@@ -16,7 +16,9 @@
           <table class="b-s-table">
             <tr>
               <td><span>Price：</span></td>
-              <td class="right-text"><span>{{IEOData.rate ? '1 ' + IEOData.currencyName + ' = ' + IEOData.rate + ' BTC' : 'To be determined'}}</span></td>
+              <td class="right-text">
+                <span>{{IEOData.rate ? '1 ' + IEOData.currencyName + ' = ' + IEOData.rate + ' BTC' : 'To be determined'}}</span>
+              </td>
             </tr>
             <tr>
               <td>Start Time：</td>
