--- a/src/app/ieo/components/popup-policy/popup-policy.component.html
+++ b/src/app/ieo/components/popup-policy/popup-policy.component.html
@@ -1,4 +1,4 @@
-<div class="overlay ieo-notification policy" *ngIf="show">
+<div class="overlay ieo-notification policy">
 	<div class="popup">
 		<div class="popup__close" (click)="closeMe()"></div>
 		<h6 class="popup__title tnx-head">Заголовок соглашения участия в IEO</h6>
