--- a/src/app/funds/balance/ieotable/ieotable.component.html
+++ b/src/app/funds/balance/ieotable/ieotable.component.html
@@ -48,6 +48,7 @@
           (click)="buyIeo(ieo)"
           *ngIf="stage.RUNNING === ieo.status && ieo.readyToIeo"
         >
+        <!-- && ieo.readyToIeo -->
           {{'Buy' | translate}}
         </button>
         <button
@@ -55,6 +56,7 @@
           (click)="goToIeo(ieo.id)"
           *ngIf="stage.PENDING === ieo.status || (stage.RUNNING === ieo.status && !ieo.readyToIeo)"
         >
+        <!-- || (stage.RUNNING === ieo.status && !ieo.readyToIeo) -->
           {{'Participate' | translate}}
         </button>
         <button
@@ -96,3 +98,16 @@
   </ul>
 </div>
 <!--paginator end-->
+
+
+<app-popup-buy
+  [IEOData]="selectedIEO"
+  *ngIf="showBuyIEO"
+  (close)="closeBuyIEO()"
+  (confirm)="confirmBuyIEO($event)"
+></app-popup-buy>
+<app-popup-success
+  *ngIf="showSuccessIEO"
+  [IEOName]="selectedIEO.currencyDescription"
+  (close)="closeSuccessIEO()"
+></app-popup-success>
