restore news link

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -154,7 +154,7 @@
       </li>
       <li class="menu__item">
         <a class="menu__link" (click)="supportRedirect()" target="blank">
-          <span class="menu__link-text">{{'Support' | translate}}</span>
+          <span class="menu__link-text">{{'News' | translate}}</span>
         </a>
       </li>
     </ul>
