--- a/src/assets/scss/pages/ieo/_ieo-header.scss
+++ b/src/assets/scss/pages/ieo/_ieo-header.scss
@@ -130,9 +130,13 @@
 			display: flex;
 			justify-content: center;
 			align-items: center;
+			background: #5E5F74;
+			border: 1px solid #5E5F74;
+			cursor: default;
 			span{
 				font-size: 14px;
 				line-height: .9;
+				color: #fff;
 			}
 		}
 		.field-description{
