ieo popups mobile

--- a/src/assets/scss/pages/ieo/_ieo-header.scss
+++ b/src/assets/scss/pages/ieo/_ieo-header.scss
@@ -15,6 +15,9 @@
 	background-color: #191a39;
 	transition: .3s;
 	transform: translateY(-105%);
+	@media (max-width: 1199px) {
+		display: none;
+	}
 	.ieo-header-inner{
 		display: flex;
 		align-items: center;
