--- a/src/assets/scss/pages/ieo/_ieo-policy.scss
+++ b/src/assets/scss/pages/ieo/_ieo-policy.scss
@@ -1,16 +1,28 @@
 .policy{
+
 	.popup{
 
 	max-width: 720px;
 	padding: 2.5em 3.5em 3.5em;
+	@media(max-width: 1199px){
+		    overflow: auto;
+		    background-color: #191A39;
+		        justify-content: flex-start;
+	}
 	}
 	.popup__title{
 		font-size: 24px;
+		@media(max-width: 1199px) {
+			color: #DEDEFB;
+		}
 	}
 	.popup__subtitle{
 		font-size: 14px;
 		margin-bottom: 3em;
 		text-align: left;
+		@media(max-width: 1199px) {
+			color: #DEDEFB;
+		}
 	}
 	.policy-button-wr{
 		max-width: 600px;
@@ -30,5 +42,8 @@
 		span{
 			color: #fff;
 		}
+	}
+	.popup__close{
+		position: fixed;
 	}
 }
