--- a/src/assets/scss/pages/ieo/ieo-first-screen.scss
+++ b/src/assets/scss/pages/ieo/ieo-first-screen.scss
@@ -217,25 +217,25 @@
 					color: #237BEF;
 				}
 				&:before{
-					content: "day";
+					content: "Day";
 				}
 
 			}
 			&:nth-child(2){
 				&:before{
-					content: "hours";
+					content: "Hours";
 				}
 
 			}
 			&:nth-child(3){
 				&:before{
-					content: "minutes";
+					content: "Minutes";
 				}
 
 			}
 			&:nth-child(4){
 				&:before{
-					content: "secunde";
+					content: "Seconds";
 				}
 
 			}
